--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clap-port-flag"
-version = "0.2.1-alpha.0"
+version = "0.3.0"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/rust-clique/clap-port-flag"
 documentation = "https://docs.rs/clap-port-flag"
