--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ documentation = "https://docs.rs/clap-port-flag"
 description = "Easily add a --port flag to CLIs using Structopt."
 authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
 readme = "README.md"
+edition = "2021"
 
 [dependencies]
 structopt = "0.2.8"
