Update to use clap instead of structopt
Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ readme = "README.md"
 edition = "2021"
 
 [dependencies]
-structopt = "0.2.8"
+clap = { version = "3", features = [ "derive", "env" ] }
 
 [dev-dependencies]
