--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ edition = "2021"
 clap = { version = "3", features = [ "derive", "env" ] }
 
 [dev-dependencies]
+futures = "0.3.24"
+hyper = { version = "0.14.20", features = ["server", "http2"] }
+tokio = { version = "1.21.0", features = ["macros", "net", "rt-multi-thread"] }
