--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ clap = { version = "3", features = [ "derive", "env" ] }
 futures = "0.3.24"
 hyper = { version = "0.14.20", features = ["server", "http2"] }
 tokio = { version = "1.21.0", features = ["macros", "net", "rt-multi-thread"] }
+
+[features]
+addr_with_port = []
+
