Make fd-passing a compiletime feature
This way, if the feature is disabled, the codebase does not contain
unsafe code.

The "fd" feature is enabled by default to preserve the current behaviour
of the crate.

Signed-off-by: Matthias Beyer <mail@beyermatthias.de>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ hyper = { version = "0.14.20", features = ["server", "http2"] }
 tokio = { version = "1.21.0", features = ["macros", "net", "rt-multi-thread"] }
 
 [features]
+default = ["fd"]
 addr_with_port = []
-
+fd = []
