--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
           - 1.60.0
           - stable
           - beta
+        features:
+          - addr_with_port
 
     steps:
       - name: Checkout sources
@@ -33,6 +35,16 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
+      - name: cargo-check-feature-${{ matrix.features }}
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+          args: --features ${{ matrix.features }}
+      - name: cargo-check-all-features
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+          args: --all-features
 
 
   deny:
@@ -78,6 +90,8 @@ jobs:
           - 1.60.0
           - stable
           - beta
+        features:
+          - addr_with_port
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
@@ -88,6 +102,16 @@ jobs:
           override: true
       - uses: swatinem/rust-cache@v1
       - name: cargo-test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all
+      - name: cargo-test-feature-${{ matrix.features }}
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all --features ${{ matrix.features }}
+      - name: cargo-test-all-features
         uses: actions-rs/cargo@v1
         with:
           command: test
